--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Buyantogtokh Bekhbayar",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.2"
+    "mongoose": "^8.0.2",
+    "morgan": "^1.10.0"
   }
 }
