Add database, datas

--- a/config.env
+++ b/config.env
@@ -1,2 +1,4 @@
 NODE_ENV=development
 PORT=3000
+DATABASE_URI=mongodb+srv://bekhebuyak:<PASSWORD>@nba.cbhp75y.mongodb.net/nba-top-75-players?retryWrites=true&w=majority
+DATABASE_PASSWORD=sIdfyv-dydgen-qynpo9
